@@ -1,3 +1,11 @@
+2008-11-27  Jens Granseuer  <jensgr@gmx.net>
+
+	Merged from trunk.
+
+	* capplet-util.c: (directory_delete_recursive): don't try to delete
+	the directory twice; fixes cleaning up after theme installations, for
+	example (bug #562371)
+
 2008-09-29  Jens Granseuer  <jensgr@gmx.net>
 
 	Merged from trunk.
